# ground-station

./: .gitignore  LICENSE  README.md  example.env  full_pan.py  main.py  pyproject.toml  requirements.txt  tester.py
comms/: notes.txt
docs/: .$Power Distro.drawio.bkp  Power Distro.drawio  api.md  calibrate.md  control-blox.blend  control-blox.blend1  dev_setup.md  devtools.md  getting_started.md  gs232.md  reference.txt  shed-calcs.ods
gs232_wrapper/: gs232_wrapper.py
pass_prediction/: TLE_Satellite_Calculation.py  satellite_predictor.py  telemetry.py
